name:                trie-perf
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/trie-perf
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz fripost org
copyright:           2019 Marco Zocca
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.4

flag Time
  Description: Enable time benchmarks using Criterion

flag Space
  Description: Enable space benchmarks using Weigh
                     
library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Data.Trie.AlexanderGreen
                       -- Data.Trie.BartoszMilewski
                       Data.Trie.JustinLe
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , data-fix
                     , generic-trie
                     , mwc-probability
                     , primitive
  if flag(Time)
    exposed-modules:   Bench.Trie.Time
    build-depends:     criterion             >= 1.5 && < 1.6,
                       criterion-measurement >= 0.1 && < 0.2

  if flag(Space)
    exposed-modules:   Bench.Trie.Space
    build-depends:     weigh >= 0.0.12                     

benchmark space
  hs-source-dirs:     bench
  type:               exitcode-stdio-1.0
  main-is:            Space.hs
  build-depends:      base                 >= 4.7      && < 4.13,
                      containers          ,
                      weigh 

benchmark time
  hs-source-dirs:     bench
  type:               exitcode-stdio-1.0
  main-is:            Time.hs
  build-depends:      base                  >= 4.7      && < 4.13,
                      containers           ,
                      criterion             >= 1.5      && < 1.6,
                      criterion-measurement >= 0.1 && < 0.2,
                      deepseq
                        
test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , trie-perf
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/trie-perf
